syntax = "proto3";

package pegaflow;

message ResponseStatus {
  bool ok = 1;
  string message = 2;
}

message RegisterContextRequest {
  string instance_id = 1;
  int32 device_id = 2;
  string layer_name = 3;
  bytes wrapper_bytes = 4;
  uint64 num_blocks = 5;
  uint64 bytes_per_block = 6;
  uint64 kv_stride_bytes = 7;
  uint32 segments = 8;
  uint32 tp_rank = 9;
  uint32 tp_size = 10;
  uint32 num_layers = 11;
  string namespace = 12;
  uint32 world_size = 13;
}

message RegisterContextResponse {
  ResponseStatus status = 1;
}

message SaveLayer {
  string layer_name = 1;
  repeated int32 block_ids = 2;
  repeated bytes block_hashes = 3;
}

message SaveRequest {
  string instance_id = 1;
  uint32 tp_rank = 2;
  int32 device_id = 3;
  repeated SaveLayer saves = 4;
}

message SaveResponse {
  ResponseStatus status = 1;
}

message LoadRequest {
  string instance_id = 1;
  uint32 tp_rank = 2;
  int32 device_id = 3;
  string load_state_shm = 4;
  repeated string layer_names = 5;
  repeated int32 block_ids = 6;
  repeated bytes block_hashes = 7;
}

message LoadResponse {
  ResponseStatus status = 1;
}

message QueryRequest {
  string instance_id = 1;
  repeated bytes block_hashes = 2;
}

// Prefetch status enum
enum PrefetchState {
  // Terminal: all available blocks ready, proceed with hit_blocks
  PREFETCH_DONE = 0;
  // Transient: blocks being prefetched from DFS, caller should retry
  PREFETCH_LOADING = 1;
}

message QueryResponse {
  ResponseStatus status = 1;
  // Number of blocks ready in cache (for backwards compatibility)
  uint64 hit_blocks = 2;
  // Prefetch state for async prefetch support
  PrefetchState prefetch_state = 3;
  // Number of blocks currently being loaded from DFS
  uint64 loading_blocks = 4;
  // Number of blocks not found in DFS
  uint64 missing_blocks = 5;
}

message UnregisterRequest {
  string instance_id = 1;
}

message UnregisterResponse {
  ResponseStatus status = 1;
}

message ShutdownRequest {}

message ShutdownResponse {
  ResponseStatus status = 1;
}

message HealthRequest {}

message HealthResponse {
  ResponseStatus status = 1;
}

service Engine {
  rpc RegisterContext(RegisterContextRequest) returns (RegisterContextResponse);
  rpc Save(SaveRequest) returns (SaveResponse);
  rpc Load(LoadRequest) returns (LoadResponse);
  rpc Query(QueryRequest) returns (QueryResponse);
  rpc UnregisterContext(UnregisterRequest) returns (UnregisterResponse);
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
}
